# h4rg_analysis

./: .gitignore  README.md  setup.cfg
notebooks/: IRP0_ramps.ipynb  IRPonly.ipynb  InitialRecon.ipynb  InplaceOLS.ipynb  MakeFigures.ipynb  MemoryHandling.ipynb  Ramp-ramp.ipynb  Ramp2Ramp.ipynb  UTR_RateUncertainty.ipynb  VarAnalysis.ipynb
python/: setup.py
python/h4rg_analysis/: io.py  plot.py  ramputils.py
scripts/: do_rampstats.py  do_simpleutr.py  makefigures_noise.py  submit_simpleutr.batch
src/phat/: darks.py  io.py  plot.py  ramputils.py  statutils.py
