[metadata]
name = phat
version = 0.0.1
author = Erin Kado-Fong
author_email = kadofong@princeton.edu
description = PFS H4RG Analysis Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ekadofong/h4rg_analysis
project_urls =
    Bug Tracker = https://github.com/ekadofong/h4rg_analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src